Get access-token from gitea
Signed-off-by: ArnobKumarSaha <arnobkumarsaha00@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     >
         Login with github
     </a>
+    <a
+            href="http://localhost:3000/login/oauth/authorize?client_id=3c7d043a-3269-4565-8106-fe0df3a61b76&redirect_uri=http://localhost:8080/oauth/redirect&response_type=code&state=rands"
+    > Login with gitea
+    </a>
 
     <ol>
         <li>`https://github.com/login/oauth/authorize` is the oAuth gateway url for github</li>
