B3 generates authorization_code & access_token
Signed-off-by: Arnob Kumar Saha <arnob@appscode.com>

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
             href="http://localhost:3000/login/oauth/authorize?client_id=3c7d043a-3269-4565-8106-fe0df3a61b76&redirect_uri=http://localhost:8080/oauth/redirect&response_type=code&state=rands"
     > Login with gitea
     </a>
+    <a
+            href="http://bb.test:3000/login/oauth/authorize?client_id=1d10e843-c088-4817-8c5c-26787c169326&redirect_uri=http://localhost:8080/oauth/redirect&response_type=code&state=rand"
+    > Login with b3
+    </a>
 
     <ol>
         <li>`https://github.com/login/oauth/authorize` is the oAuth gateway url for github</li>
