Check validity of a token
Signed-off-by: Arnob Kumar Saha <arnob@appscode.com>

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     </br>
 
     <a
-            href="http://bb.test:3000/login/oauth/authorize?client_id=1d10e843-c088-4817-8c5c-26787c169326&redirect_uri=http://localhost:8080/oauth/redirect&response_type=code&state=rand"
+            href="http://bb.test:3000/login/oauth/authorize?client_id=1d10e843-c088-4817-8c5c-26787c169326&redirect_uri=http://localhost:8080/oauth/redirect&response_type=code&state=rand&scope=openid profile"
     > Login with b3
     </a>
 
